fixed header icon position on mobile resolution

--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,7 @@ box-shadow: 0px 2px 30px 14px rgba(60, 64, 67, 0.10);
 .nav{
   position: relative;
    z-index: 1;
-   max-width: 1500px;
+   max-width: 1400px;
    margin-left: auto;
       margin-right: auto;
    height: 80px;
@@ -121,7 +121,7 @@ box-shadow: 0px 2px 30px 14px rgba(60, 64, 67, 0.10);
   flex-basis: 1s;
   display: flex;
   align-items: center;
-  padding-left: 60px;
+  padding-left: 20px;
 }
 .nav-title-icon{
   height: 30px;
@@ -342,7 +342,7 @@ text-align: center;
 }
 .project img{
   width: 100%;
-  max-height: 24vw;
+  max-height: 300px;
   -webkit-border-radius: 2em 2em 0em 0em;
   -moz-border-radius: 2em 2em 0em 0em;
   border-radius: 2em 2em 0em 0em;
